Intro partial, method partial

--- a/1wk/latex/report.tex
+++ b/1wk/latex/report.tex
@@ -71,7 +71,7 @@
     {\large \datum  \\[0.4cm]}
 
     \begin{minipage}{0.4\textwidth}
-        \begin{flushleft} 
+        \begin{flushleft}
             \emph{Student:}\\
             {\studentA \\ {\small \uvanetidA \\[0.2cm]}}
             \ifthenelse{\isundefined{\studentB}}{}{\studentB \\ {\small \uvanetidB \\[0.2cm]}}
@@ -82,7 +82,7 @@
     \end{minipage}
     ~
     \begin{minipage}{0.4\textwidth}
-        \begin{flushright} 
+        \begin{flushright}
             \emph{Supervisor:} \\
             \docent \\[0.2cm]
             \emph{Course:} \\
@@ -102,7 +102,33 @@
 % =================================== MAIN TEXT ===================================
 
 \section{Introduction}
+
+For this assignment a parallel programming solution needs to be implemented for
+two problems, wave equation simulation and Sieve of Eratosthenes. For the wave
+simulation the user can specify the amount of wave amplitude points, the amount
+of steps it needs to simulate and the desired amount of threads. The program
+then calculates all the wave values until the it has done the specified amount
+of steps.
+
+The Sieve of Eratosthenes <...>
+
 \section{Method}
+\subsection{Wave Equation Simulation}
+
+First the specified amount of threads need to be created, these threads will
+then all start executing the function $calc\_wave$. $calc\_wave$ first checks if
+there is an amplitude point in the row $t+1$ that needs calculation. This check
+is done in order, using a variable $current\_index$ that keeps track of which
+amplitude point is the latest one currently being calculated. $current\_index$
+is mutex locked to check and increment it before starting calculation on that
+particular amplitude point, so that no two threads waste their time calculating
+the same point. Once the $current\_index$ reaches the last point in the wave,
+$i\_max$, threads will wait until all other threads finish their calculations.
+When the row is completely finished the $current\_index$ is reset and the rows
+are rotated, after which an event is generated telling all threads to restart
+their routine.
+
+
 \section{Results}
 
 
