--- a/1wk/latex/report.tex
+++ b/1wk/latex/report.tex
@@ -98,7 +98,12 @@
 % =================================== FRONT PAGE ===================================
 
 \tableofcontents
+.\\
+\begin{center}
+    \includegraphics[width=(\textwidth/5*3)]{parallel_tasks}
+\end{center}
 \clearpage
+
 
 % =================================== MAIN TEXT ===================================
 
@@ -156,7 +161,8 @@ buffer, or if the input buffer is empty, the thread will wait for a signal
 before it can continue.
 
 \section{Results}
-
+\subsection{Wave Equation Simulation}
+\subsection{Sieve of Eratosthenes}
 
 
 \section{Discussion}
