--- a/1wk/latex/report.tex
+++ b/1wk/latex/report.tex
@@ -115,10 +115,10 @@ wave simulation the user can specify the amount of wave amplitude points, the
 amount of steps it needs to simulate and the desired amount of threads. The
 program then calculates all the wave values until it has done the specified
 amount of steps.\\
-For the Sieve of Eratosthenes assignment the program will use the Sieve of Eratosthenes
-algorithm to continuously produce prime numbers until a certain
-the use of multiple threads, thus utilising parallelism, until the user decides
-to send a SIGINT to terminate the program.
+For the Sieve of Eratosthenes assignment the program will use the Sieve of
+Eratosthenes algorithm to continuously produce prime numbers until a certain
+amount of primes have been found. It will do this using multiple threads, thus
+utilising parallelism.
 
 \section{Method}
 \subsection{Wave Equation Simulation}
@@ -166,7 +166,8 @@ before it can continue.
 
 
 \section{Discussion}
-
+\subsection{Wave Equation Simulation}
+\subsection{Sieve of Eratosthenes}
 
 
 % =================================== REFERENCES ===================================
