--- a/1wk/latex/report.tex
+++ b/1wk/latex/report.tex
@@ -97,13 +97,14 @@
 
 % =================================== FRONT PAGE ===================================
 
-\tableofcontents
-.\\
+\vspace{2cm}
 \begin{center}
     \includegraphics[width=(\textwidth/5*3)]{parallel_tasks}
 \end{center}
 \clearpage
 
+\tableofcontents
+\vspace{1cm}
 
 % =================================== MAIN TEXT ===================================
 
