--- a/1wk/latex/report.tex
+++ b/1wk/latex/report.tex
@@ -104,7 +104,7 @@
 \clearpage
 
 \tableofcontents
-\vspace{1cm}
+\vspace{5mm}
 
 % =================================== MAIN TEXT ===================================
 
