vectahs and report

--- a/2wk/latex/report2_1.tex
+++ b/2wk/latex/report2_1.tex
@@ -122,10 +122,10 @@ Implementing OpenMP is quite simple, all that needed to be done was to write a
 sequential program for the wave equation simulation, and then state that a
 certain for-loop can be done in parallel using the OpenMP commands. There are
 however several different ways of scheduling that can be used when parallelizing
-a for-loop with openMP and we will test all of
-them to see which is the most effective. Those results will then again be
-compared to the results we found with our results from the previous assignment
-using pthreads to parallelize this program.
+a for-loop with openMP and we will test all of them to see which is the most
+effective. Those results will then again be compared to the results we found
+with our results from the previous assignment using pthreads to parallelize this
+program.
 
 \section{Results}
 
