--- a/2wk/latex/report2_3.tex
+++ b/2wk/latex/report2_3.tex
@@ -44,7 +44,7 @@
 % =================================== DOC INFO ===================================
 
 \newcommand{\titel}{OpenMP}
-\newcommand{\opdracht}{Assignment 2.1: Loop}
+\newcommand{\opdracht}{Assignment 2.3: Matrices}
 \newcommand{\docent}{Dr. C. Grelck}
 \newcommand{\cursus}{Concurrency and Parallel Programming}
 \newcommand{\vakcode}{5062COPP6Y}
