--- a/3wk/latex/report3_2.tex
+++ b/3wk/latex/report3_2.tex
@@ -111,12 +111,52 @@
 
 \section{Introduction}
 
+In this assignment the goal was to create a communicator function that makes it
+possible for any node to send messages as well as receive them. The
+implementation had to be as efficient as possible in distributing the message,
+so when it is scaled to a much larger and more complex system, it can still be
+used with good performance.
 
 \section{Method}
 
+The communication is done using a broadcast function. When sending a message,
+this function will be called by all nodes, regardless of whether they are sender
+or receiver. Upon entering this function the first thing that is done is
+determining whether or not `we' (a random node picked from the executing nodes)
+are the root node. This is done by comparing our rank to the supplied root node
+value. Once we determined if we are root or not, we can then start by either
+sending out message (in case we are root) or waiting for a message to arrive (in
+case we are not root).\\
 
-\section{Results}
+The distribution of the message is done not only by the root node, but by all
+nodes that have the message. As soon as a node receives the message, it will
+also join in sending that message to other nodes that have yet to receive the
+message. This ensures that the time it takes to send the message to all nodes is
+of $O(log(n))$. It also enables us to calculate the amount of steps we need
+before the message has been completely distributed. \\
 
+Before sending a message, we calculate the total number of iterations we need in
+order to fully distribute the message, as well as using the translated rank
+(translated means that we see the root as rank 0) to calculate at which
+iteration we currently are. When for instance the node with a translated rank of
+2 wants to enter the loop and start sending, we are already at iteration 3. It
+is important to know which iteration we are currently at, because we need that
+to calculate which particular node we need to send the message to. At iteration
+3 we need to send the message to the node which rank is $2^{(iteration-1)}$
+higher than our rank.\\
+
+The image below illustrates how distribution works and which nodes send the
+message to which other nodes per iteration when we have a total of 8 nodes.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{distribution}
+    \caption{Iterations of the distribution of a message over 8 nodes.}
+\end{figure}
+
+From the above image one can clearly see that a problem occurs when the amount
+of nodes is not a multiple of 2. For this reason the destination node is checked
+to be smaller than the number of threads, so no invalid messages will be send.
 
 \section{Discussion}
 
