--- a/4wk/latex/report4.tex
+++ b/4wk/latex/report4.tex
@@ -113,10 +113,10 @@
 
 In this program MapReduce (Hadoop) is used to process large quantities of data.
 The data processed in this case are tweets and the goal of this program is to
-first count the different hashtags that are used in the tweets and determine
-which are the most popular ones. And second, try to determine the language in
-which the tweets are written. The language is determined using the Standford
-National Language Processing API.
+first of all count the different hashtags that are used in the tweets and determine
+which are the most popular ones. And second determine the sentiment score of a
+tweet.\\
+Hadoop is as stated above an implementation of MapReduce.
 
 \section{Method}
 
